--- a/Testing/Testing/Views/Home/Index.cshtml
+++ b/Testing/Testing/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">Testing MVC5 ASP.NET</p>
+    <p class="lead">Lollo Testing MVC5 ASP.NET</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
